function(add_ztest NAME)
    set(SAMPLE_NAME ${NAME})
    add_executable(${SAMPLE_NAME} ${NAME}.cpp)
    add_dependencies(${SAMPLE_NAME}      shared)
    target_link_libraries(${SAMPLE_NAME} shared)
    source_group("code" FILES ${NAME}.cpp)
    add_test(NAME ${NAME} COMMAND ${NAME})
endfunction()

add_ztest(test_phys)
add_ztest(test_logic)
add_ztest(test_zmath)
add_ztest(test_animation)
